cosmetic changes to gui apearance

--- a/headers/level_pass.ui
+++ b/headers/level_pass.ui
@@ -40,6 +40,9 @@
        <property name="text">
         <string>999</string>
        </property>
+       <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+       </property>
       </widget>
      </item>
     </layout>
