--- a/headers/level_pass.ui
+++ b/headers/level_pass.ui
@@ -17,7 +17,7 @@
    <enum>Qt::LeftToRight</enum>
   </property>
   <property name="styleSheet">
-   <string notr="true">QWidget#nextLevelButton{background-color: qradialgradient(spread:repeat, cx:0.5, cy:0.5, radius:0.077, fx:0.5, fy:0.5, stop:0 rgba(0, 169, 255, 147), stop:0.497326 rgba(0, 0, 0, 0), stop:1 rgba(0, 169, 255, 147))}</string>
+   <string notr="true">QWidget#nextLevelButton{background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(32, 96, 210, 255), stop:1 rgba(255, 255, 255, 255))}</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
